update print without footer & header

--- a/print.html
+++ b/print.html
@@ -86,7 +86,7 @@
 										
 									</div>
                                     <div class="job last" style="top: -50px;">
-                                        <h4 style="font-weight: 700; display: block; padding: 10px; background-color: black; color: #fff;"><span class="kewan">Kewan</span>&nbsp;<span class="no">Nomor</span></h4>
+                                        <h4 style="font-weight: 700; display: block; padding: 10px; border: 4px solid black; color: black;"><span class="kewan">Kewan</span>&nbsp;<span class="no">Nomor</span></h4>
                                     </div>
 							</div>
 						</div>
@@ -154,7 +154,7 @@
 								</ul>
 
 								<div class="job last" style="top: -80px;">
-                                    <h4 style="font-weight: 700; display: block; padding: 10px; background-color: black; color: #fff;"><span class="kewan">Kewan</span>&nbsp;<span class="no">Nomor</span></h4>
+                                    <h4 style="font-weight: 700; display: block; padding: 10px; border: 4px solid black; color: black;"><span class="kewan">Kewan</span>&nbsp;<span class="no">Nomor</span></h4>
                                 </div>
 							</div>
 						</div><!--// .yui-gf-->
