--- a/print.html
+++ b/print.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="reset-fonts-grids.css" media="all" /> 
 	<link rel="stylesheet" type="text/css" href="resume.css" media="all" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js "></script>
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js "></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script> -->
 
@@ -32,7 +32,7 @@
         }
     </script>
 </head>
-<body>
+<body onafterprint="closeTab()">
     
 
 <!-- print() -->
@@ -206,6 +206,7 @@
 </div><!--// doc -->
 
 <script>
+
 	function getUrlVars() {
         var vars = {};
         var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi,    
@@ -216,31 +217,42 @@
     }
 
 	const inputTgl = new Date(getUrlVars()["tgl"]);
-	const hijri = new Intl.DateTimeFormat('ID-TN-u-ca-islamic',{year : 'numeric'}).format(inputTgl);
+	const hijriYear = new Intl.DateTimeFormat('ID-TN-u-ca-islamic',{year : 'numeric'}).format(inputTgl);
+	const hijriDate = new Intl.DateTimeFormat('ID-TN-u-ca-islamic',{day: 'numeric', month: 'long',year : 'numeric'}).format(inputTgl);
 	const options = { year: 'numeric', month: 'long', day: 'numeric' };
 	tgl = inputTgl.toLocaleDateString('ID', options);
 
-	const nama = getUrlVars()["nama"];
-	const alamat = getUrlVars()["alamat"];
-    const kewan = getUrlVars()["kewan"];
-    const no = getUrlVars()["no"];
+	//alert(hijriDate);
+
+	const nama = decodeURI(getUrlVars()["nama"]).replace(/[+]/g," ");
+	const alamat = decodeURI(getUrlVars()["alamat"]).replace(/[+]/g," ");
+    const kewan = getUrlVars()["kewan"].toUpperCase();
+    const no = getUrlVars()["no"].toUpperCase();
 	
-	
+	document.getElementsByClassName("hijri")[0].innerHTML= hijriYear;
 	document.getElementsByClassName("tgl")[0].innerHTML = tgl;
 	document.getElementsByClassName("tgl")[1].innerHTML = tgl;
-	document.getElementsByClassName("hijri")[0].innerHTML= hijri;
-    document.getElementsByClassName("nama")[0].innerHTML= decodeURI(nama).replace(/[+]/g," ");
-    document.getElementsByClassName("nama")[1].innerHTML= decodeURI(nama).replace(/[+]/g," ");
-    document.getElementsByClassName("nama")[2].innerHTML= decodeURI(nama).replace(/[+]/g," ");
-	document.getElementsByClassName("alamat")[0].innerHTML= decodeURI(alamat).replace(/[+]/g," ");
-	document.getElementsByClassName("alamat")[1].innerHTML= decodeURI(alamat).replace(/[+]/g," ");
-    document.getElementsByClassName("kewan")[0].innerHTML= kewan.toUpperCase();
-    document.getElementsByClassName("kewan")[1].innerHTML= kewan.toUpperCase();
-    document.getElementsByClassName("no")[0].innerHTML= no.toUpperCase();
-    document.getElementsByClassName("no")[1].innerHTML= no.toUpperCase();
+	
+	//const nama = decodeURI(pnama).replace(/[+]/g," ");
+	//const alamat = decodeURI(palamat).replace(/[+]/g," ");
+	//const kewan = pkewan.toUpperCase();
+	//const no = pno.toUpperCase();
+
+    document.getElementsByClassName("nama")[0].innerHTML = nama;
+    document.getElementsByClassName("nama")[1].innerHTML = nama;
+    document.getElementsByClassName("nama")[2].innerHTML = nama;
+	document.getElementsByClassName("alamat")[0].innerHTML = alamat;
+	document.getElementsByClassName("alamat")[1].innerHTML= alamat;
+    document.getElementsByClassName("kewan")[0].innerHTML= kewan;
+    document.getElementsByClassName("kewan")[1].innerHTML= kewan;
+    document.getElementsByClassName("no")[0].innerHTML= no;
+    document.getElementsByClassName("no")[1].innerHTML= no;
     //alert(nama + " - " + kewan);
     //alert("The URL of this page is: " + window.location.href);
+	
+	document.title = "[TANDA TERIMA]-[" + kewan.toUpperCase() +" "+ no+ "]-"+ nama;
 	window.print(); 
+	
 
 </script>
 </body>
