--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <form action="print.html">
         <br/>
         <label for="nama">Tgl Pelaksanaan (Masehi):</label><br>
-        <input type="date" id="tgl" name="tgl"><br><br>
+        <input type="date" id="tgl" name="tgl">
+        <label>Hijri tolerance</label>
+        <input type="number" id="tolerance" name="tolerance" value="-1" style="width: 50px;"><br><br>
         <label for="nama">Nama Shohibul Qurban:</label><br>
         <input type="text" id="nama" name="nama" value="Siapa Nama Shohibulnya" style="width: 300px;"><br><br>
         <label for="nama">Alamat:</label><br>
